updated userModel
altered authController as a result, no longer using mongoose error codes to see if a user already exits, that's handled by the middleware now
