# src/controllers/authController.js
@@ -1,30 +1,27 @@
-import argon from 'argon2'
-import userModel from '../models/userModel'
-import clientErrors from '../utils/clientErrors'
-import codes from '../utils/codes'
+import argon from 'argon2';
+import codes from '../utils/codes';
+import userModel from '../models/userModel';
+import jwt from '../utils/createJWT';
 
 export default {
-    register: async (req, res) => {
-        // TODO: should I maybe check if the user exists before argon? could have like 20ms
-        try {
-            const user = await userModel.create({
-                username: req.body.username,
-                displayName: req.body.displayName,
-                email: req.body.email,
-                password: await argon.hash(req.body.password)
-            })
-            // TODO: Need to return a JWT
-            return res.status(codes.CREATED).json(user)
-        } catch (err) {
-            // handle for duplicated fields, maybe, need to check
-            if (err.code && err.code === 11000) return clientErrors.duplicateField(res, err)
-            // implement other errors
-            console.log(err)
-            return res.status(500).json(err)
-        }
+  register: async (req, res) => {
+    try {
+      const user = await userModel.create({
+        username: req.body.username,
+        displayName: req.body.displayName,
+        email: req.body.email,
+        password: await argon.hash(req.body.password),
+      });
+      // TODO: Need to return a JWT
 
-    },
-    login: async (req, res) => {
-
+      return res.status(codes.Created).json(jwt.create(user));
+    } catch (err) {
+      // implement other errors
+      console.log(err);
+      return res.status(codes.InternalServerError).json(err);
     }
-}
+  },
+  login: async (req, res) => {
+
+  },
+};
